--- a/coffeeMain.css
+++ b/coffeeMain.css
@@ -5,7 +5,7 @@ body{
 	background: url("https://image.freepik.com/free-vector/wooden-texture_23-2147511826.jpg") no-repeat center fixed;
 	background-size: cover;
 }
-.button{
+.backbutton{
 	border:2px solid white;
 	color:white;
 	text-align:center;
@@ -13,19 +13,87 @@ body{
 	font-size:100px;
 	border-radius:20px;
 }
-.button:hover{
+.backbutton:hover{
 	background:#8A3324;
 }
-aside{
-	float:left;
-	border-right:2px solid white;
-	width:48%;
+.backbutton:active {
+	position:relative;
+	top:2px;
 }
-.pickYourCofee{
-	width:48%;
+aside, #selectionTable, #coffeebill{
 	float:left;
+	width:auto;
+    font-family:'AR BERKLEY';
+    font-size:40px;
+    margin:5% 0 0 0;
+}
+
+#menuTable{
+    float:left;
+}
+td{
+    text-align:center;
+    padding:5px;
+}
+
+
+.pickYourCofee{
+	width:50%;
+	float:left;
+    width:auto;
+    margin-left:80px;
+    border:2px dashed white;
 }
 .total{
-	clear:both;
-	border:1px solid white;
+	float:right;
+    border:1px solid black;
+    margin:5% 2% 0 0;
+    text-align:center;
+    width:20%;
+}
+button{
+    color:white;
+    cursor:pointer;
+    font-family:'Lato',Arial;
+    font-size:20px;
+	padding:7px 25px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #e1e2ed;
+    -moz-box-shadow: 3px 4px 0px 0px #899599;
+	-webkit-box-shadow: 3px 4px 0px 0px #899599;
+	box-shadow: 3px 4px 0px 0px #899599;
+	background-color:#7d5d3b;
+	-moz-border-radius:15px;
+	-webkit-border-radius:15px;
+	border-radius:15px;
+	border:1px solid #d6bcd6;
+}
+button:hover{
+    background:white;
+    color:black;
+    position:relative;
+	top:1px;
+}
+button:active{
+    position:relative;
+	transform: translateY(4px);
+}
+#coffeebill th{
+    color:white
+}
+#coffeebill td{
+        font-size:30px;
+        font-family:sans-serif;
+        color:white;
+}
+#coffeebill{
+    width:100%;
+    margin:0 0 5% 0;
+}
+
+div.otherButtons{
+    text-align:center;
+}
+#rest, #newOrder{
+  
 }
