--- a/coffeeMain.css
+++ b/coffeeMain.css
@@ -27,13 +27,20 @@ aside, #selectionTable{
     font-size:40px;
     margin:5% 0 0 0;
 }
-#coffeebill{
+.pickYourCofee td{
+    border:hidden;
+}
+#coffeebill, #coffeebilltotal,#coffeebilltitle{
     font-family:'OCR A';
-    font-size:20px;
-    width:100%;
-    margin:0 0 5% 0;
+    font-size:13px;
+    width:100%;   
     color:white;
+}
 
+.mainbillTable{
+    width:100%;
+    height:400px;
+    overflow:scroll;
 }
 #menuTable{
     float:left;
@@ -42,8 +49,12 @@ td{
     text-align:center;
     padding:2px;
 }
-
-
+h4{
+    text-align:center;
+    font-family:'Edwardian Script ITC';
+    font-size: 30px;
+    margin:0;
+}
 .pickYourCofee{
 	width:40%;
 	float:left;
@@ -59,7 +70,6 @@ td{
     width:20%;
 }
 button{
-    color:white;
     cursor:pointer;
     font-family:'Lato',Arial;
     font-size:20px;
@@ -75,25 +85,18 @@ button{
 	-webkit-border-radius:15px;
 	border-radius:15px;
 	border:1px solid #d6bcd6;
+    float:right;
 }
 
 button:active{
     position:relative;
 	transform: translateY(4px);
 }
-div.otherButtons{
-    text-align:center;
-}
+
 #checkout,#myOrder{
-    background-color:#8A3324;
-    -moz-border-radius:10px;
-	-webkit-border-radius:10px;
-	border-radius:10px;
-    font-size:20px;
-    font-family:'AR DESTINE';
     width:250px;
 }
-#getTotal, #reset, #addOrder{
+.other, #checkout, #myOrder, #addOrder{
      background-color:#8A3324;
     -moz-border-radius:10px;
 	-webkit-border-radius:10px;
