--- a/home.css
+++ b/home.css
@@ -3,23 +3,19 @@ body{
 font-family: 'Edwardian Script ITC', sans-serif;
 background: url("http://eskipaper.com/images/free-coffee-wallpaper-3.jpg") no-repeat center fixed;
 background-size: cover;
+display:none;
 }
 
 .mainbody{
     float:right;
     width:50%;
-    height:auto;
-    margin-right:30px;
+    margin: 0 10% 0 0;
 }
 
 .homePageHeader{
-  width: 100%;
-  margin: 0 auto;
   text-align: center;
-  border-bottom:1px solid white;
 }
 .letter{
-  display: inline-block;
   font-weight: 900;
   font-size: 8em;
   position: relative;
@@ -27,10 +23,11 @@ background-size: cover;
   transform-style: preserve-3d;
   perspective: 400px;
   z-index: 1;
+  margin:5px;
 }
 .title{
     margin:-5% 0 0 35%;
-    text-align:center;
+    text-align:right;
 }
 .cofe{
 	font-family:'AR BERKLEY'; 
@@ -44,8 +41,7 @@ background-size: cover;
   position:absolute;
   content: attr(data-letter);
   transform-origin: 0 50%;
-  top:0;
-  left:0;
+ 
 }
 .letter, .letter:before, .letter:after{
   transition: all 0.5s ease-in-out;
@@ -79,15 +75,17 @@ background-size: cover;
 }
 
 blockquote{
-	font-family:'Edwardian Script ITC'; 
-	font-size: 45px;
+	font-size: 2.5em;
 	color:#7d5d3b;
 	text-align:center;
-    margin-top:20%;
+    margin:12% 0;
 }
 
+
+
+
 .divbutton{
-    margin:10% 0 0 50%;   
+    margin:10% 0 0 40%;   
 }
 .highlight,#coffee{
     font-size:larger;
@@ -103,15 +101,13 @@ blockquote{
 	-webkit-border-radius:15px;
 	border-radius:15px;
 	border:1px solid #d6bcd6;
-	display:inline-block;
 	cursor:pointer;
 	color:#FFC8A6;
-	font-family:'Lato',Arial;
-	font-size:45px;
+	font-family:'AR BERKLEY','Lato',Arial;
+	font-size:3em;
 	padding:7px 25px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #e1e2ed;
-    float:right;
 }
 .button:hover {
 	background-color:#8A3324;
@@ -120,3 +116,55 @@ blockquote{
 	position:relative;
 	top:3px;
 }
+
+
+@media screen and (max-device-width: 1280px) {
+    .letter{
+        font-size:6em;
+    }
+    blockquote{
+        margin:10% 0;
+        font-size:2.5em;
+    }
+    .cofe{
+        font-size:2em;
+    }
+    .button{
+        font-size:2em;
+    }
+}
+@media screen and (max-device-width: 800px) {
+     .letter{
+        font-size:4em;
+    }
+      .cofe{
+        font-size:1.5em;
+    }
+      .button{
+        font-size:1.5em;
+        margin:40% 0 0 20%;
+    }
+      blockquote{
+        margin:60% 0;
+        font-size:2.5em;
+    }
+
+}
+@media screen and (max-device-width: 800px) {
+     .letter{
+        font-size:3em;
+    }
+      .cofe{
+        font-size:1.5em;
+    }
+      .button{
+        font-size:1.5em;
+        margin:40% 0 0 20%;
+    }
+      blockquote{
+        margin:40% 0;
+        font-size:2.5em;
+    }
+
+}
+
